<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item 
	android:title="@string/save" 
	android:id="@+id/save_find_menu_item" 
	android:icon="@android:drawable/ic_menu_save">
	</item>
<item 
	android:id="@+id/discard_changes_menu_item" 
	android:title="@string/discard_changes" 
	android:icon="@android:drawable/ic_menu_close_clear_cancel">
	</item>
<item 
	android:title="@string/take_picture" 
	android:id="@+id/camera_menu_item"
	android:icon="@android:drawable/ic_menu_camera">
	</item>
<item 
	android:id="@+id/video_menu_item"
	android:title="Capture Video" 
	android:icon="@drawable/ic_menu_movie">
	</item>
<item 
	android:id="@+id/audio_menu_item" 
	android:title="Capture Audio" 
	android:icon="@drawable/ic_menu_add_sound">
	</item>
<item 
	android:icon="@android:drawable/ic_menu_delete" 
	android:title="@string/delete" 
	android:id="@+id/delete_find_menu_item">
	</item>
</menu>