<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical" android:scrollbars="vertical|horizontal"
			android:layout_marginBottom="30dp">
			
			<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<TableLayout android:id="@+id/contents_new_find" android:layout_width="fill_parent" android:layout_height="48sp" android:orientation="vertical" android:stretchColumns="0,1">
					<TableRow android:layout_width="fill_parent" android:layout_height="24sp">
						<LinearLayout android:id="@+id/linear_layout_1" android:layout_width="fill_parent" android:layout_height="24sp">
							<TextView android:id="@+id/latitudeLabel" android:text="@string/latitude" android:layout_width="wrap_content" android:layout_height="fill_parent" />
							<TextView android:id="@+id/latitudeText" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxLength="10" android:maxLines="1" />
						</LinearLayout>
						<LinearLayout android:layout_width="fill_parent" android:layout_height="24sp">
							<TextView android:id="@+id/longitudeLabel" android:text="@string/longitude" android:layout_width="wrap_content" android:layout_height="fill_parent" android:paddingRight="2sp" />
							<TextView android:id="@+id/longitudeText" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxLength="10" android:maxLines="1" />
						</LinearLayout>
					</TableRow>
					<TableRow android:layout_width="fill_parent" android:layout_height="24sp">
							<TextView android:id="@+id/timeLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_time_label" android:paddingRight="2dp"/>
							<TextView android:id="@+id/timeText" android:layout_width="fill_parent" android:layout_height="wrap_content" />
					</TableRow>
				</TableLayout>
				
			</LinearLayout>
			
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<LinearLayout android:layout_width="fill_parent"
				   android:layout_height="wrap_content" 
				   android:orientation="horizontal">
				<TextView android:id="@+id/idLabel" android:layout_width="20sp" android:layout_height="wrap_content" android:text="@string/idLabel" />
				<Button android:id="@+id/idBarcodeButton" android:layout_width="120dp" android:layout_height="wrap_content" android:text="@string/barcodeText" />
				<EditText android:id="@+id/idText" android:freezesText="true" android:layout_width="fill_parent" android:layout_height="wrap_content" />
				</LinearLayout>
			
				<EditText android:id="@+id/nameText" android:freezesText="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/ghostData_name" />

			
				<EditText android:id="@+id/descriptionText"
					android:layout_width="fill_parent" android:padding="10dip" android:maxLines="6" android:scrollbars="vertical"
					android:fadingEdge="vertical" android:scrollbarStyle="insideOverlay" android:layout_height="fill_parent" android:hint="@string/ghostData_description"/>
				<TextView android:id="@+id/barcodeReaderError"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textColor="#ff0000"
					android:text="@string/barcodeReaderError" />
			</LinearLayout>
			<!-- 		
			<ImageView android:id="@+id/photo"  
			android:adjustViewBounds="true"
		    android:layout_width="100px"
            android:layout_height="100px" /> 
			-->
			<Gallery android:id="@+id/picturesTaken" 
				android:src="@drawable/about"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
				
			<Button
				android:id="@+id/view_video"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:text="@string/view_video" />
				
			<Button
				android:id="@+id/view_audio"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:text="@string/review_audio" />
		
		</LinearLayout>

	</ScrollView>

</LinearLayout>